replaced all "getLast"